scripts/nullaway/original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8.txt
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Pool.java:70: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Hand.java:271: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Hand.java:278: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Hand.java:295: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Hand.java:369: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Client.java:41: error: [NullAway] initializer method does not guarantee @NonNull fields mySocket (line 30), inbox (line 31), outbox (line 32) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Client() {
	       ^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Client.java:42: error: [NullAway] assigning @Nullable expression to @NonNull field
		mySocket = null;
		         ^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Client.java:43: error: [NullAway] assigning @Nullable expression to @NonNull field
		inbox = null;
		      ^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Client.java:44: error: [NullAway] assigning @Nullable expression to @NonNull field
		outbox = null;
		       ^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/HintClient.java:20: error: [NullAway] initializer method does not guarantee @NonNull fields game (line 11), hand (line 12) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public HintClient(boolean initialMeldMade){
	       ^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/HintClient.java:21: error: [NullAway] assigning @Nullable expression to @NonNull field
		game = null;
		     ^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/HintClient.java:22: error: [NullAway] assigning @Nullable expression to @NonNull field
		hand = null;
		     ^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/HintClient.java:74: error: [NullAway] assigning @Nullable expression to @NonNull field
				hand = null;
				     ^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/GameInfo.java:174: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/GameInfo.java:272: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/RAIclient.java:23: error: [NullAway] initializer method does not guarantee @NonNull fields client (line 8), game (line 11), hand (line 12) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public RAIclient(String serverIP, int port){
	       ^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/RAIclient.java:29: error: [NullAway] assigning @Nullable expression to @NonNull field
			game = null;
			     ^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/RAIclient.java:30: error: [NullAway] assigning @Nullable expression to @NonNull field
			hand = null;
			     ^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:105: error: [NullAway] initializer method does not guarantee @NonNull fields pool (line 46), hands (line 47), initialMelds (line 48), game (line 49) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Server(int numPlayers){
           ^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:41: error: [NullAway] @NonNull static field serverSocket not initialized
    private static ServerSocket serverSocket;  
                                ^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:106: error: [NullAway] assigning @Nullable expression to @NonNull field
    	serverSocket = null;
    	             ^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:111: error: [NullAway] assigning @Nullable expression to @NonNull field
        pool = null;
             ^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:112: error: [NullAway] assigning @Nullable expression to @NonNull field
        hands = null;
              ^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:113: error: [NullAway] assigning @Nullable expression to @NonNull field
    	game = null;
    	     ^
    (see http://t.uber.com/nullaway )
../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Move.java:111: error: [NullAway] dereferenced expression endPositions.get(key) is @Nullable
			for(int j=0; j<endPositions.get(key).size(); j++){
			                                    ^
    (see http://t.uber.com/nullaway )
Note: ../original/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/GameInfo.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
25 errors
